# pre-market-arb

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/client/: bybit_client.py  hyperliquid_client.py  hyperliquid_decorator.py  i_client.py
src/core/: exceptions.py  notifier.py  observer_mixin.py  orderbook_searcher.py  price_oracle.py  trade_container.py  trade_executor.py  tradind_config.py  trading_config.py  trading_manager.py  trading_strategy.py  types.py
src/core/observer_pattern/: i_observer_mixin.py
src/core/sub_strategy/: best_price_simple_strategy.py  i_sub_strategy.py  oi_capped_arb_strategy.py
