[project]
name = "pre-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.14",
    "loguru>=0.7.2",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
